fix exit loader z-index

--- a/frontend/src/targets/electron/components/exit-loader/ExitLoader.module.scss
+++ b/frontend/src/targets/electron/components/exit-loader/ExitLoader.module.scss
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: center;
   backdrop-filter: blur(2px);
-  z-index: 10;
+  z-index: 100;
 
   .loader {
     @include pulse(1s)
